# ChangeLog for dev-python/pysensors
# Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
# $Header: $

  12 Aug 2012; Justin Lecher <jlec@gentoo.org> pysensors-0.0.2.ebuild,
  +metadata.xml:
  Shorten DESCRIPTION, add metadata.xml
