@@ -1,1 +1,1 @@
-DIST PySensors-0.0.2.tar.gz 5347 SHA256 242d208e505b02d344530e089e65724016a9799ff21a1475926f662ebc37f3d4
+DIST PySensors-0.0.2.tar.gz 5347 SHA256 242d208e505b02d344530e089e65724016a9799ff21a1475926f662ebc37f3d4 SHA512 6d04a515f1aad1356754c3035f11d0a9a771c3b663461988c2ebf654477ab87e2c7bc2e2c6186cf0f1f202804df1b1e6f75decb122ef078adb655a2944d95ab8 WHIRLPOOL e22d1e474855fdf3156a8bf054457bf2bcff78251a26c47c74adf7eb0285a79c36345091c2232bfbed3d20838115407973202b504e6d68ec7747e788679fd930
