@@ -1,23 +1,20 @@
-# Copyright 1999-2012 Gentoo Foundation
+# Copyright 1999-2013 Gentoo Foundation
 # Distributed under the terms of the GNU General Public License v2
 # $Header: $
 
-EAPI="3"
+EAPI=5
 
-PYTHON_DEPEND="2"
-SUPPORT_PYTHON_ABIS="1"
-RESTRICT_PYTHON_ABIS="3.*"
-PYTHON_MODNAME="sensors"
+PYTHON_COMPAT=( python{2_6,2_7} )
 
-inherit distutils
+inherit distutils-r1
 
 DESCRIPTION="Python bindings for libsensors via ctypes."
 HOMEPAGE="http://pypi.python.org/pypi/PySensors/"
 SRC_URI="mirror://pypi/P/PySensors/PySensors-${PV}.tar.gz"
 
+SLOT="0"
 LICENSE="GPL-2"
 KEYWORDS="amd64 x86"
-SLOT="0"
 IUSE=""
 
 S="${WORKDIR}"/PySensors-${PV}
