@@ -1,6 +1,10 @@
 # ChangeLog for dev-python/pysensors
-# Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
+# Copyright 1999-2013 Gentoo Foundation; Distributed under the GPL v2
 # $Header: $
+
+  11 Jun 2013; Justin Lecher <jlec@gentoo.org> pysensors-0.0.2.ebuild,
+  metadata.xml:
+  Bump to EAPI=5 and new python r1 eclasses
 
   12 Aug 2012; Justin Lecher <jlec@gentoo.org> pysensors-0.0.2.ebuild,
   +metadata.xml:
